Managers and server system